VTK-2483 - fix clipped icons in help-box

--- a/src/main/resources/web/themes/default/report/report.css
+++ b/src/main/resources/web/themes/default/report/report.css
@@ -252,10 +252,12 @@ div.vrtx-report #vrtx-report-help {
 
 #vrtx-report-help-restricted {
   background: url(../images/folder-small-restricted.gif) no-repeat 0 0;
+  height: 19px;
 }
 
 #vrtx-report-help-allowed-for-all {
   background: url(../images/folder-small.gif) no-repeat 0 0;
+  height: 19px;
 }
 
 .vrtx-report-help-allowed-for-all-inherited-folder {
